[client-web] Fixed alignment of checkboxes in user settings and few fixes for timezone configuration.

--- a/sw/shongo/client-web/src/main/resources/css/application.css
+++ b/sw/shongo/client-web/src/main/resources/css/application.css
@@ -174,15 +174,15 @@ form .controls div label.radio.inline, form .controls div label.checkbox.inline 
     line-height: 20px;
 }
 /* Form - double width input */
-form .double-width input {
-    width: 336px;
+form .double-width>input {
+    width: 346px;
 }
-form .double-width textarea {
-    width: 336px;
+form .double-width>textarea {
+    width: 346px;
 }
-form .double-width select,
+form .double-width>select,
 form .double-width div.select2-container {
-    width: 350px;
+    width: 360px;
 }
 /* Form - reCaptcha*/
 iframe[src="about:blank"] {
